cmake_minimum_required( VERSION 3.1 )

add_definitions(-DUNICODE
                -D_UNICODE )

################################################################################
#
# CXX specific options
#
################################################################################
set( CMAKE_CXX_FLAGS_DEBUG "/D_DEBUG /MTd /Zi /Ob0 /Od /RTC1" )

################################################################################
#
# Output
#
################################################################################
add_executable( main MainEntry.cpp )